--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family: Helvetica, Tahoma, sans-serif;
-    background-color: #F6F7F9
+    background-color: #F6F7F9;
+    font-size: 16px
 }
 
 div {
